CppEditor: Manually indent moved comments

Using the indenter yields unepected results in certain contexts.

Fixes: QTCREATORBUG-29786
Change-Id: Id15eff841d2aa54e7fff65c6bf728516e03f9fc6
Reviewed-by: David Schulz <david.schulz@qt.io>
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>