src/plugins/cppeditor/cppquickfix_test.cpp
@@ -9272,7 +9272,9 @@ template<typename T> inline T aFunction() { return T(); }
 
     const QByteArrayList headersMemberDecl2Def{R"(
 class C {
-    // Member function comment
+    /**
+      * \brief Foo::aMember
+      */
     void @aMember();
 )", R"(
 class C {
@@ -9285,7 +9287,9 @@ void C::aMember() {}
 )", R"(
 #include "file.h"
 
-// Member function comment
+/**
+  * \brief Foo::aMember
+  */
 void C::aMember() {}
 )"};
     QTest::newRow("member function: from decl to def") << headersMemberDecl2Def
@@ -9296,13 +9300,17 @@ class C {
     void aMember();
 )", R"(
 class C {
-    // Member function comment
+    /**
+      * \brief Foo::aMember
+      */
     void aMember();
 )"};
     const QByteArrayList sourcesMemberDef2Decl{R"(
 #include "file.h"
 
-// Member function comment
+/**
+  * \brief Foo::aMember
+  */
 void C::aMember() {@}
 )", R"(
 #include "file.h"
